--- a/CSS/pc_grids.css
+++ b/CSS/pc_grids.css
@@ -5,23 +5,39 @@
    Tutorial Case
    
    Style Sheet for Grids used in the Pandaisia Chocolates website
-   Author: 
-   Date:   
+   Author: Nik is Awesome
+   Date: 09/06/2025
    
    Filename: pc_grids.css
 
 */
 
-
 /* Grid Rows Styles */
-
-
-
+div.row {
+    clear: both;
+}
+div.row::after {
+    clear: both;
+    content: "";
+    display: table;
+}
 
 /* Grid Columns Styles */
-
-
-
+div[class^="col-"] {
+    float: left;
+}
+div.col-1-1 { width: 100%; }
+div.col-1-2 { width: 50%; }
+div.col-1-3 { width: 33.33%; }
+div.col-2-3 { width: 66.67%; }
+div.col-1-4 { width: 25%; }
+div.col-3-4 { width: 75%; }
+div.col-1-6 { width: 16.66%; }
+div.col-1-12 { width: 8.33%; }
 
 /* Grid Outline Styles */
+
+div {
+    outline: 1px solid red;
+}
 
