--- a/CSS/pc_home.css
+++ b/CSS/pc_home.css
@@ -42,15 +42,42 @@ nav.horizontalNavigation a {
 }
 
 /* Left Column Styles */
+section#leftColumn {
+    clear: left;
+    float: left;
+    padding: 1.5em;
+    width: 33%;
 
-
-
+}
 
 /* Right Column Styles */
-
-
-
-
+section#rightColumn {
+    float: left;
+    width: 67%;
+}
+section#rightColumn img {
+    display: block;
+    width: 100%;
+}
+section#rightColumn > nav.horizontalNavigation li {
+    width: 25%;
+}
 
 /* Footer Styles */
-
+footer {
+    background-color: rgb(71, 52, 29);
+    clear: left;
+}
+footer > nav.verticalNavigation {
+    float: left;
+    width: 22%;
+}
+footer > section#contactInfo {
+    float: left;
+    width: 34%;
+}
+footer::after {
+    clear: both;
+    content: "";
+    display: table;
+}
